[package]
name = "whirlpool"
version = "0.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpool"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29"
anchor-spl = { version = "0.29.0", features = ["dex", "token", "metadata"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
solana-program = "~1.17.18"
thiserror = "1.0"
uint = {version = "0.9.1", default-features = false}
borsh = "0.9.1"
bytemuck = "1.14.0"

[dev-dependencies]
proptest = "1.0"
serde = "1.0.117"
serde_json = "1.0.59"

[dev-dependencies.serde_with]
version = "1.12.0"
features = ["json"]
